// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`connectionResolver when a cursor is supplied when there are NO missing pages in the cache 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "MTo6MQ==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": Object {
        "id": "MTo6MQ==",
      },
    },
    Object {
      "cursor": "Mjo6MQ==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": Object {
        "id": "Mjo6MQ==",
      },
    },
    Object {
      "cursor": "Mzo6MQ==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": Object {
        "id": "Mzo6MQ==",
      },
    },
    Object {
      "cursor": "NDo6MQ==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": Object {
        "id": "NDo6MQ==",
      },
    },
    Object {
      "cursor": "NTo6MQ==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": Object {
        "id": "NTo6MQ==",
      },
    },
  ],
  "errors": Array [],
  "nodes": Array [
    Object {
      "id": "MTo6MQ==",
    },
    Object {
      "id": "Mjo6MQ==",
    },
    Object {
      "id": "Mzo6MQ==",
    },
    Object {
      "id": "NDo6MQ==",
    },
    Object {
      "id": "NTo6MQ==",
    },
  ],
  "pageInfo": Object {
    "endCursor": "NTo6MQ==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
    "hasNextPage": true,
    "hasPreviousPage": true,
    "startCursor": "MTo6MQ==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
  },
  "totalCount": 100,
}
`;

exports[`connectionResolver when a cursor is supplied when there are missing pages in the cache 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "MTo6MQ==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": Object {
        "id": "MTo6MQ==",
      },
    },
    Object {
      "cursor": "Mjo6MQ==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": Object {
        "id": "Mjo6MQ==",
      },
    },
    Object {
      "cursor": "Mzo6MQ==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": Object {
        "id": "Mzo6MQ==",
      },
    },
    Object {
      "cursor": "NDo6MQ==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": Object {
        "id": "NDo6MQ==",
      },
    },
    Object {
      "cursor": "NTo6MQ==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": Object {
        "id": "NTo6MQ==",
      },
    },
    Object {
      "cursor": "Njo6MQ==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": Object {
        "id": "Njo6MQ==",
      },
    },
    Object {
      "cursor": "Nzo6MQ==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": Object {
        "id": "Nzo6MQ==",
      },
    },
    Object {
      "cursor": "ODo6MQ==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": Object {
        "id": "ODo6MQ==",
      },
    },
    Object {
      "cursor": "OTo6MQ==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": Object {
        "id": "OTo6MQ==",
      },
    },
    Object {
      "cursor": "TURvNk1nPT06OnsicXVlcnkiOiJIZWxsbyB3b3JsZCEifQ==",
      "node": Object {
        "id": "MDo6Mg==",
      },
    },
    Object {
      "cursor": "TVRvNk1nPT06OnsicXVlcnkiOiJIZWxsbyB3b3JsZCEifQ==",
      "node": Object {
        "id": "MTo6Mg==",
      },
    },
    Object {
      "cursor": "TWpvNk1nPT06OnsicXVlcnkiOiJIZWxsbyB3b3JsZCEifQ==",
      "node": Object {
        "id": "Mjo6Mg==",
      },
    },
    Object {
      "cursor": "TXpvNk1nPT06OnsicXVlcnkiOiJIZWxsbyB3b3JsZCEifQ==",
      "node": Object {
        "id": "Mzo6Mg==",
      },
    },
    Object {
      "cursor": "TkRvNk1nPT06OnsicXVlcnkiOiJIZWxsbyB3b3JsZCEifQ==",
      "node": Object {
        "id": "NDo6Mg==",
      },
    },
    Object {
      "cursor": "TlRvNk1nPT06OnsicXVlcnkiOiJIZWxsbyB3b3JsZCEifQ==",
      "node": Object {
        "id": "NTo6Mg==",
      },
    },
    Object {
      "cursor": "TmpvNk1nPT06OnsicXVlcnkiOiJIZWxsbyB3b3JsZCEifQ==",
      "node": Object {
        "id": "Njo6Mg==",
      },
    },
    Object {
      "cursor": "TnpvNk1nPT06OnsicXVlcnkiOiJIZWxsbyB3b3JsZCEifQ==",
      "node": Object {
        "id": "Nzo6Mg==",
      },
    },
    Object {
      "cursor": "T0RvNk1nPT06OnsicXVlcnkiOiJIZWxsbyB3b3JsZCEifQ==",
      "node": Object {
        "id": "ODo6Mg==",
      },
    },
    Object {
      "cursor": "T1RvNk1nPT06OnsicXVlcnkiOiJIZWxsbyB3b3JsZCEifQ==",
      "node": Object {
        "id": "OTo6Mg==",
      },
    },
    Object {
      "cursor": "MDo6Mw==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": Object {
        "id": "MDo6Mw==",
      },
    },
    Object {
      "cursor": "MTo6Mw==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": Object {
        "id": "MTo6Mw==",
      },
    },
    Object {
      "cursor": "Mjo6Mw==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": Object {
        "id": "Mjo6Mw==",
      },
    },
    Object {
      "cursor": "Mzo6Mw==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": Object {
        "id": "Mzo6Mw==",
      },
    },
    Object {
      "cursor": "NDo6Mw==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": Object {
        "id": "NDo6Mw==",
      },
    },
    Object {
      "cursor": "NTo6Mw==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": Object {
        "id": "NTo6Mw==",
      },
    },
    Object {
      "cursor": "Njo6Mw==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": Object {
        "id": "Njo6Mw==",
      },
    },
    Object {
      "cursor": "Nzo6Mw==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": Object {
        "id": "Nzo6Mw==",
      },
    },
    Object {
      "cursor": "ODo6Mw==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": Object {
        "id": "ODo6Mw==",
      },
    },
    Object {
      "cursor": "OTo6Mw==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": Object {
        "id": "OTo6Mw==",
      },
    },
    Object {
      "cursor": "MDo6NA==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": Object {
        "id": "MDo6NA==",
      },
    },
    Object {
      "cursor": "MTo6NA==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": Object {
        "id": "MTo6NA==",
      },
    },
    Object {
      "cursor": "Mjo6NA==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": Object {
        "id": "Mjo6NA==",
      },
    },
    Object {
      "cursor": "Mzo6NA==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": Object {
        "id": "Mzo6NA==",
      },
    },
    Object {
      "cursor": "NDo6NA==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": Object {
        "id": "NDo6NA==",
      },
    },
    Object {
      "cursor": "NTo6NA==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": Object {
        "id": "NTo6NA==",
      },
    },
  ],
  "errors": Array [],
  "nodes": Array [
    Object {
      "id": "MTo6MQ==",
    },
    Object {
      "id": "Mjo6MQ==",
    },
    Object {
      "id": "Mzo6MQ==",
    },
    Object {
      "id": "NDo6MQ==",
    },
    Object {
      "id": "NTo6MQ==",
    },
    Object {
      "id": "Njo6MQ==",
    },
    Object {
      "id": "Nzo6MQ==",
    },
    Object {
      "id": "ODo6MQ==",
    },
    Object {
      "id": "OTo6MQ==",
    },
    Object {
      "id": "MDo6Mg==",
    },
    Object {
      "id": "MTo6Mg==",
    },
    Object {
      "id": "Mjo6Mg==",
    },
    Object {
      "id": "Mzo6Mg==",
    },
    Object {
      "id": "NDo6Mg==",
    },
    Object {
      "id": "NTo6Mg==",
    },
    Object {
      "id": "Njo6Mg==",
    },
    Object {
      "id": "Nzo6Mg==",
    },
    Object {
      "id": "ODo6Mg==",
    },
    Object {
      "id": "OTo6Mg==",
    },
    Object {
      "id": "MDo6Mw==",
    },
    Object {
      "id": "MTo6Mw==",
    },
    Object {
      "id": "Mjo6Mw==",
    },
    Object {
      "id": "Mzo6Mw==",
    },
    Object {
      "id": "NDo6Mw==",
    },
    Object {
      "id": "NTo6Mw==",
    },
    Object {
      "id": "Njo6Mw==",
    },
    Object {
      "id": "Nzo6Mw==",
    },
    Object {
      "id": "ODo6Mw==",
    },
    Object {
      "id": "OTo6Mw==",
    },
    Object {
      "id": "MDo6NA==",
    },
    Object {
      "id": "MTo6NA==",
    },
    Object {
      "id": "Mjo6NA==",
    },
    Object {
      "id": "Mzo6NA==",
    },
    Object {
      "id": "NDo6NA==",
    },
    Object {
      "id": "NTo6NA==",
    },
  ],
  "pageInfo": Object {
    "endCursor": "NTo6NA==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
    "hasNextPage": true,
    "hasPreviousPage": true,
    "startCursor": "MTo6MQ==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
  },
  "totalCount": 100,
}
`;

exports[`connectionResolver when the first [X] number are requested when there is a fresh cache and there are NO missing pages in the cache 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "MDo6MQ==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": Object {
        "id": "MDo6MQ==",
      },
    },
    Object {
      "cursor": "MTo6MQ==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": Object {
        "id": "MTo6MQ==",
      },
    },
    Object {
      "cursor": "Mjo6MQ==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": Object {
        "id": "Mjo6MQ==",
      },
    },
    Object {
      "cursor": "Mzo6MQ==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": Object {
        "id": "Mzo6MQ==",
      },
    },
    Object {
      "cursor": "NDo6MQ==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": Object {
        "id": "NDo6MQ==",
      },
    },
  ],
  "errors": Array [],
  "nodes": Array [
    Object {
      "id": "MDo6MQ==",
    },
    Object {
      "id": "MTo6MQ==",
    },
    Object {
      "id": "Mjo6MQ==",
    },
    Object {
      "id": "Mzo6MQ==",
    },
    Object {
      "id": "NDo6MQ==",
    },
  ],
  "pageInfo": Object {
    "endCursor": "NDo6MQ==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
    "hasNextPage": true,
    "hasPreviousPage": false,
    "startCursor": "MDo6MQ==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
  },
  "totalCount": 100,
}
`;

exports[`connectionResolver when the first [X] number are requested when there is a fresh cache and there are missing pages in the cache 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "TURvNk1RPT06OnsicXVlcnkiOiJIZWxsbyB3b3JsZCEifQ==",
      "node": Object {
        "id": "MDo6MQ==",
      },
    },
    Object {
      "cursor": "TVRvNk1RPT06OnsicXVlcnkiOiJIZWxsbyB3b3JsZCEifQ==",
      "node": Object {
        "id": "MTo6MQ==",
      },
    },
    Object {
      "cursor": "TWpvNk1RPT06OnsicXVlcnkiOiJIZWxsbyB3b3JsZCEifQ==",
      "node": Object {
        "id": "Mjo6MQ==",
      },
    },
    Object {
      "cursor": "TXpvNk1RPT06OnsicXVlcnkiOiJIZWxsbyB3b3JsZCEifQ==",
      "node": Object {
        "id": "Mzo6MQ==",
      },
    },
    Object {
      "cursor": "TkRvNk1RPT06OnsicXVlcnkiOiJIZWxsbyB3b3JsZCEifQ==",
      "node": Object {
        "id": "NDo6MQ==",
      },
    },
  ],
  "errors": Array [],
  "nodes": Array [
    Object {
      "id": "MDo6MQ==",
    },
    Object {
      "id": "MTo6MQ==",
    },
    Object {
      "id": "Mjo6MQ==",
    },
    Object {
      "id": "Mzo6MQ==",
    },
    Object {
      "id": "NDo6MQ==",
    },
  ],
  "pageInfo": Object {
    "endCursor": "TkRvNk1RPT06OnsicXVlcnkiOiJIZWxsbyB3b3JsZCEifQ==",
    "hasNextPage": true,
    "hasPreviousPage": false,
    "startCursor": "TURvNk1RPT06OnsicXVlcnkiOiJIZWxsbyB3b3JsZCEifQ==",
  },
  "totalCount": 100,
}
`;
